--- a/yolov3/yolov3.cfg
+++ b/yolov3/yolov3.cfg
@@ -1,12 +1,12 @@
 [net]
 # Testing
-# batch=1
-# subdivisions=1
+#batch=1
+#subdivisions=1
 # Training
 batch=64
 subdivisions=16
-width=608
-height=608
+width=416
+height=416
 channels=3
 momentum=0.9
 decay=0.0005
@@ -21,6 +21,8 @@ max_batches = 500200
 policy=steps
 steps=400000,450000
 scales=.1,.1
+
+show_receptive_field=1
 
 [convolutional]
 batch_normalize=1
